--- a/index.html
+++ b/index.html
@@ -131,23 +131,73 @@
         </div>
     </div>
 </section>
+
 <footer class="footer">
-    <h3 class="footer__title">Связь с нами</h3>
-    <div class="footer__social-items">
-        <div class="footer__social-item">По документам
-            <a class="footer__logo" href="#">
-                <img src="./img/tg-logo.svg" alt="Телеграм">
-            </a>
+    <div class="container">
+        <h3 class="footer__title">Связь с нами</h3>
+        <div class="footer__social-items">
+            <div class="footer__social-item">
+                <h5 class="footer__social-title">По документам</h5>
+                <div class="footer__logo-links">
+                    <a class="footer__logo" href="#">
+                        <img src="./img/tg-logo.svg" alt="Телеграм">
+                    </a>
+                    <a class="footer__logo" href="#">
+                        <img src="./img/viber-logo.svg" alt="Вайбер">
+                    </a>
+                    <a class="footer__logo" href="#">
+                        <img src="./img/whats-logo.svg" alt="Вотсапп">
+                    </a>
+                </div>
+            </div>
+            <div class="footer__social-item">
+                <h5 class="footer__social-title">По сотрудничеству</h5>
+                <div class="footer__logo-links">
+                    <a class="footer__logo" href="#">
+                        <img src="./img/tg-logo.svg" alt="Телеграм">
+                    </a>
+                    <a class="footer__logo" href="#">
+                        <img src="./img/viber-logo.svg" alt="Вайбер">
+                    </a>
+                    <a class="footer__logo" href="#">
+                        <img src="./img/whats-logo.svg" alt="Вотсапп">
+                    </a>
+                </div>
+            </div>
+            <div class="footer__social-item">
+                <h5 class="footer__social-title">По трудоустройству</h5>
+                <div class="footer__logo-links">
+                    <a class="footer__logo" href="#">
+                        <img src="./img/tg-logo.svg" alt="Телеграм">
+                    </a>
+                    <a class="footer__logo" href="#">
+                        <img src="./img/viber-logo.svg" alt="Вайбер">
+                    </a>
+                    <a class="footer__logo" href="#">
+                        <img src="./img/whats-logo.svg" alt="Вотсапп">
+                    </a>
+                </div>
+            </div>
         </div>
-        <div class="footer__social-item">По документам
-            <a class="footer__logo" href="#">
-                <img src="./img/viber-logo.svg" alt="Вайбер">
-            </a>
-        </div>
-        <div class="footer__social-item">По документам
-            <a class="footer__logo" href="#">
-                <img src="./img/whats-logo.svg" alt="Вотсапп">
-            </a>
+        <div class="footer__menu">
+                <ul class="footer__menu-list">
+                    <li class="footer__menu-item"><span>Odessa Crewing Agency  2014 - 2023</span></li>
+                    <li class="footer__menu-item">
+                        <a class="footer__menu-link" href="#">Главная</a>
+                    </li>
+                    <li class="footer__menu-item">
+                        <a class="footer__menu-link" href="#">Для судовладельцев</a>
+                    </li>
+                    <li class="footer__menu-item">
+                        <a class="footer__menu-link" href="#">Для моряков</a>
+                    </li>
+                    <li class="footer__menu-item">
+                        <a class="footer__menu-link" href="#">Для сотрудников и партнеров</a>
+                    </li>
+                    <li class="footer__menu-item">
+                        <a class="footer__menu-link" href="#">О нас</a>
+                    </li>
+                </ul>
         </div>
     </div>
 </footer>
